--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prettier/plugin-pug": "^2.4.2",
     "@types/node": "^18",
     "@volar/vue-language-plugin-pug": "^1.6.3",
+    "babylonjs": "^6.1.0",
     "nuxt": "^3.4.3",
     "prettier": "^2.8.8",
     "pug": "^3.0.2",
