--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@tsconfig/strictest": "^2.0.1",
     "@types/node": "^18",
     "@volar/vue-language-plugin-pug": "^1.6.3",
+    "autoprefixer": "^10.4.14",
     "babylonjs": "^6.1.0",
     "babylonjs-loaders": "^6.1.0",
     "nuxt": "^3.4.3",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "pug": "^3.0.2",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "tailwindcss": "^3.3.2"
   }
 }
